# CMake

./: README.md
cmake-3.26.4-tutorial-source/: README.md
cmake-3.26.4-tutorial-source/Step1/: CMakeLists.txt
cmake-3.26.4-tutorial-source/Step1/Step1_build/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake-3.26.4-tutorial-source/Step10/: CMakeLists.txt  tutorial.cxx
cmake-3.26.4-tutorial-source/Step10/MathFunctions/: CMakeLists.txt  MathFunctions.h
cmake-3.26.4-tutorial-source/Step10/Step10_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  MakeTable  Makefile  Tutorial  cmake_install.cmake  libMathFunctions.dylib
cmake-3.26.4-tutorial-source/Step10/Step10_build/MathFunctions/: Makefile  cmake_install.cmake
cmake-3.26.4-tutorial-source/Step11/: CMakeLists.txt
cmake-3.26.4-tutorial-source/Step11/MathFunctions/: CMakeLists.txt
cmake-3.26.4-tutorial-source/Step11/Step11_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  MathFunctionsTargets.cmake  Tutorial  cmake_install.cmake
cmake-3.26.4-tutorial-source/Step11/Step11_build/MathFunctions/: Makefile  cmake_install.cmake
cmake-3.26.4-tutorial-source/Step12/: CMakeLists.txt
cmake-3.26.4-tutorial-source/Step12/_CPack_Packages/Darwin/STGZ/: Tutorial-1.0-Darwin.sh
cmake-3.26.4-tutorial-source/Step12/debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  MakeTable  Makefile  MathFunctionsTargets.cmake  Tutoriald  cmake_install.cmake  install_manifest.txt  libMathFunctionsd.1.0.0.dylib
cmake-3.26.4-tutorial-source/Step12/debug/MathFunctions/: Makefile  cmake_install.cmake
cmake-3.26.4-tutorial-source/Step12/release/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  MakeTable  Makefile  MathFunctionsTargets.cmake  Tutorial  cmake_install.cmake  install_manifest.txt  libMathFunctions.1.0.0.dylib
cmake-3.26.4-tutorial-source/Step12/release/MathFunctions/: Makefile  cmake_install.cmake
cmake-3.26.4-tutorial-source/Step2/: CMakeLists.txt  tutorial.cxx
cmake-3.26.4-tutorial-source/Step2/MathFunctions/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cmake-3.26.4-tutorial-source/Step2/Step2_build/: CMakeCache.txt  Makefile  Tutorial  cmake_install.cmake
cmake-3.26.4-tutorial-source/Step2/Step2_build/MathFunctions/: Makefile  cmake_install.cmake
cmake-3.26.4-tutorial-source/Step3/: CMakeLists.txt
cmake-3.26.4-tutorial-source/Step3/MathFunctions/: CMakeLists.txt
cmake-3.26.4-tutorial-source/Step3/Step3_build/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake-3.26.4-tutorial-source/Step3/Step3_build/MathFunctions/: Makefile  cmake_install.cmake
cmake-3.26.4-tutorial-source/Step4/: CMakeLists.txt
cmake-3.26.4-tutorial-source/Step4/Step4_build/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake-3.26.4-tutorial-source/Step4/Step4_build/MathFunctions/: Makefile  cmake_install.cmake
cmake-3.26.4-tutorial-source/Step5/: CMakeLists.txt
cmake-3.26.4-tutorial-source/Step5/MathFunctions/: CMakeLists.txt
cmake-3.26.4-tutorial-source/Step5/Step5_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  Tutorial  cmake_install.cmake
cmake-3.26.4-tutorial-source/Step5/Step5_build/MathFunctions/: Makefile  cmake_install.cmake
cmake-3.26.4-tutorial-source/Step5/Step5_build/Testing/Temporary/: CTestCostData.txt
cmake-3.26.4-tutorial-source/Step6/: CMakeLists.txt
cmake-3.26.4-tutorial-source/Step6/Step6_build/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
cmake-3.26.4-tutorial-source/Step6/Step6_build/MathFunctions/: Makefile  cmake_install.cmake
cmake-3.26.4-tutorial-source/Step6/Step6_build/Testing/: TAG
cmake-3.26.4-tutorial-source/Step6/Step6_build/Testing/20230519-1850/: Build.xml  Configure.xml  Done.xml  Test.xml
cmake-3.26.4-tutorial-source/Step6/Step6_build/Testing/20230519-1851/: Build.xml  Configure.xml  (+2 more)
cmake-3.26.4-tutorial-source/Step7/MathFunctions/: CMakeLists.txt  mysqrt.cxx
cmake-3.26.4-tutorial-source/Step7/Step7_build/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
cmake-3.26.4-tutorial-source/Step7/Step7_build/MathFunctions/: Makefile  cmake_install.cmake
cmake-3.26.4-tutorial-source/Step8/MathFunctions/: CMakeLists.txt  mysqrt.cxx
cmake-3.26.4-tutorial-source/Step8/Step8_build/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
cmake-3.26.4-tutorial-source/Step8/Step8_build/MathFunctions/: MakeTable  Makefile  cmake_install.cmake
cmake-3.26.4-tutorial-source/Step9/: CMakeLists.txt
cmake-3.26.4-tutorial-source/Step9/Step9_build/: CPackConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  cmake_install.cmake  install_manifest.txt
cmake-3.26.4-tutorial-source/Step9/Step9_build/MathFunctions/: cmake_install.cmake
lecture-03/: README.md
lecture-03/cmake_lib/: CMakeLists.txt  README.md
lecture-03/cmake_lib/install/include/: CMakeLists.txt  Name.hpp
lecture-03/cmake_lib/install/lib/: CMakeLists.txt
lecture-03/cmake_lib/src/: CMakeLists.txt
lecture-03/cmake_lib/src/appStudent/: CMakeLists.txt  Main.cpp  Student.cpp  Student.hpp
lecture-03/cmake_lib/srcLib/: CMakeLists.txt  README.md
lecture-03/cmake_lib/srcLib/lib/: libName.dylib
lecture-03/cmake_lib/srcStudent/: CMakeLists.txt  README.md  Student.cpp
lecture-03/make/: CMakeLists.txt  README.md  a.out  lib  libs.mk  modular.mk  myMakeFile.mk  student_service
lecture-03/make_lib/: CMakeLists.txt  README.md
lecture-03/make_lib/lib/: empty.txt
lecture-03/make_lib/src/: CMakeLists.txt
lecture-03/make_lib/src/appStudent/: CMakeLists.txt  Main.cpp  Makefile  Name.cpp  Name.hpp  Student.cpp  Student.hpp  student_service
lecture-03/make_lib/src/libName/: CMakeLists.txt  Makefile
lecture-03/make_lib2/: README.md
lecture-03/make_lib2/install/include/: CMakeLists.txt  Name.hpp
lecture-03/make_lib2/install/lib/: empty.txt
lecture-03/make_lib2/src/appStudent/: Student.cpp  Student.hpp
(+15 files in other folders)
